objects/B2CCommerceCloud_Internal_SF_Helpdesk__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Comments__c</fullName>
        <inlineHelpText>If requester selects Sandbox in the Demandware Instance Instance field, they must specify the applicable Sandbox within the comments.</inlineHelpText>
        <label>Additional Comments</label>
        <length>100000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>B2CCommerceCloud_Instance__c</fullName>
        <label>B2C Commerce Cloud Instance</label>
        <required>true</required>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Production Instance</fullName>
                </value>
                <value>
                    <fullName>Staging Instance</fullName>
                </value>
                <value>
                    <fullName>Development Instance</fullName>
                </value>
                <value>
                    <fullName>Sandbox Instance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Status__c</fullName>
        <label>Request Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                    <default>true</default>
                    <label>Created</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Awaiting Requester Response</fullName>
                </value>
                <value>
                    <fullName>Awaiting Approval</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requested_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requested By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Demandware_DISH</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Training_Services_Business_Type__c</fullName>
        <label>Training Services Business Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Service Delivery</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Product Management</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>TSC</fullName>
                </value>
                <value>
                    <fullName>Vendor</fullName>
                </value>
                <value>
                    <fullName>Other – Please Specify in Comments</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Email__c</fullName>
        <label>User&apos;s Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>User_First_Name__c</fullName>
        <label>User&apos;s First Name</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Last_Name__c</fullName>
        <label>User&apos;s Last Name</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Request_Type__c</fullName>
        <label>User Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New User</fullName>
                </value>
                <value>
                    <fullName>User Modification</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Title__c</fullName>
        <label>User&apos;s Title</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>B2C Commerce Cloud DISH</label>
    <nameField>
        <displayFormat>{YYYY}{MM}-{0}</displayFormat>
        <label>B2C Commerce Cloud DISH Ticket Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>B2C Commerce Cloud DISH</pluralLabel>
    <recordTypes>
        <fullName>User_Creation_Request</fullName>
        <active>true</active>
        <description>User Creation or Modification Request for B2C Commerce Cloud</description>
        <label>User Creation or Modification Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>User_Termination_Request</fullName>
        <active>true</active>
        <description>User Termination Request for B2C Commerce Cloud</description>
        <label>User Termination Request</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>